--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,2 +1,47 @@
-/* some style */
+body {
+    background-color : black;
+}
 
+.character-banner {
+    text-align: center;
+    color: white;
+    padding-bottom: 20px;
+}
+
+.character-banner > img {
+    height: 330px
+}
+
+.selected-cell {
+    background-color: red;
+}
+
+.char-row {
+}
+
+.char-cell {
+    padding : 10px;
+    height : 75px;
+    width : 75px;
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    vertical-align: bottom;
+}
+
+.char-cell > span {
+    border-radius: 5px;
+    background-color: black;
+    font-size: 16px;
+    color: white;
+}
+
+.selected-cell > span {
+    background-color : white;
+    font-size: 20px;
+    color : black;
+}
+
+table {
+    margin: 0 auto
+}
